// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<secret> demo: > render [basic] correctly 1`] = `
<div class="sd-secret"><span class="sd-secret-content sd-secret-placeholder">********</span><button type="button" class="sd-secret-trigger" aria-label="显示敏感信息" aria-pressed="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-eye" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M24 37q9.94 0 18-13-8.06-13-18-13T6 24q8.06 13 18 13Z" clip-rule="evenodd"></path>
      <path d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"></path>
    </svg></button>
  <!----><a class="sd-link sd-link-status-normal sd-link-with-icon sd-copy sd-copy-inherit"><span class="sd-link-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-copy" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M20 6h18a2 2 0 0 1 2 2v22M8 16v24c0 1.105.891 2 1.996 2h20.007A1.99 1.99 0 0 0 32 40.008V15.997A1.997 1.997 0 0 0 30 14H10a2 2 0 0 0-2 2Z"></path></svg></span></a>
  <!---->
</div>
`;

exports[`<secret> demo: > render [controlled] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-outline sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
      <!--v-if-->切换为显示
    </button></div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-secret"><span class="sd-secret-content sd-secret-placeholder">********</span><button type="button" class="sd-secret-trigger" aria-label="显示敏感信息" aria-pressed="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-eye" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M24 37q9.94 0 18-13-8.06-13-18-13T6 24q8.06 13 18 13Z" clip-rule="evenodd"></path>
          <path d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"></path>
        </svg></button>
      <!----><a class="sd-link sd-link-status-normal sd-link-with-icon sd-copy sd-copy-inherit"><span class="sd-link-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-copy" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M20 6h18a2 2 0 0 1 2 2v22M8 16v24c0 1.105.891 2 1.996 2h20.007A1.99 1.99 0 0 0 32 40.008V15.997A1.997 1.997 0 0 0 30 14H10a2 2 0 0 0-2 2Z"></path></svg></span></a>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<secret> demo: > render [no-copy] correctly 1`] = `
<div class="sd-secret"><span class="sd-secret-content sd-secret-placeholder">********</span><button type="button" class="sd-secret-trigger" aria-label="显示敏感信息" aria-pressed="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-eye" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M24 37q9.94 0 18-13-8.06-13-18-13T6 24q8.06 13 18 13Z" clip-rule="evenodd"></path>
      <path d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"></path>
    </svg></button>
  <!---->
  <!--v-if-->
</div>
`;

exports[`<secret> demo: > render [placeholder] correctly 1`] = `
<div class="sd-secret"><span class="sd-secret-content sd-secret-placeholder">手机号已隐藏</span><button type="button" class="sd-secret-trigger" aria-label="显示敏感信息" aria-pressed="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-eye" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M24 37q9.94 0 18-13-8.06-13-18-13T6 24q8.06 13 18 13Z" clip-rule="evenodd"></path>
      <path d="M29 24a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"></path>
    </svg></button>
  <!----><a class="sd-link sd-link-status-normal sd-link-with-icon sd-copy sd-copy-inherit"><span class="sd-link-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-copy" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M20 6h18a2 2 0 0 1 2 2v22M8 16v24c0 1.105.891 2 1.996 2h20.007A1.99 1.99 0 0 0 32 40.008V15.997A1.997 1.997 0 0 0 30 14H10a2 2 0 0 0-2 2Z"></path></svg></span></a>
  <!---->
</div>
`;
